--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
-
+body{
+        margin-top: 50px;
+        margin-left: 200px;
+        margin-right: 200px;
+        font-style: Forum;
+        text-align: center;
+        background-color: lightgrey;
+      }
+      nav{
+        text-align: left;
+        text-decoration: none;
+        color: darkblue;
+      }
