--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,9 @@
         margin-top: 50px;
         margin-left: 200px;
         margin-right: 200px;
-        font-style: Times New Roman;
+        font-family: Times New Roman;
         text-align: left;
-        background: linear-gradient (to right, lightpink, white, skyblue);
+        background: linear-gradient(to right, lightpink, white, skyblue);
       }
 
 nav{
@@ -26,7 +26,7 @@ img{
 
 .button{
       font-size: 25px;
-      border: solid darkblue;
+      border: 2px solid darkblue;
       background-color: lightblue;
       padding: 5px;
     }
