--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
         font-family: Times New Roman;
         text-align: left;
         background: linear-gradient(to right, lightpink, white, skyblue);
+        color: purple;
       }
 
 nav{
