--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,11 @@ img{
         max-width: 300px;
         height: auto;
         border-radius: 90px;
-        border: solid white 1px;
-        filter: grayscale(70%);
+        border: solid lightpink 1px;
+        filter: grayscale(50%);
         float: right;
         padding: 20px;
-        margin: 10px;
+        margin: 20px;
       }
 
 .button{
@@ -47,3 +47,11 @@ table, th, thead, tfoot{
  border: 2px solid purple;
 }
 
+a{
+ text-decoration: none;       
+ color: pink;
+      }
+a:hover, a:clicked{
+  color: lightpink;
+  text-decoration: none;     
+      }
