--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
         font-family: Times New Roman;
         text-align: left;
         background: linear-gradient(to right, lightpink, white, skyblue);
-        color: purple;
+        color: rebeccapurple;
       }
 
 nav{
@@ -29,7 +29,7 @@ img{
 
 .button{
       font-size: 25px;
-      border: 5px solid darkmagenta;
+      border: 5px solid rebeccapurple;
       background-color: linear-gradient(to left, lightpink, white, skyblue);
       padding: 5px;
       margin: 20px;
@@ -48,6 +48,6 @@ table, th, thead, tfoot{
 }
 
 a:hover, a:clicked{
-  color: rebeccapurple;
+  color: purple;
   text-decoration: none;     
       }
